Lesson#21 Implemented action to create task via API
