# config/api_doc.yaml
@@ -78,8 +78,10 @@ nelmio_api_doc:
               schema:
                 type: object
                 properties:
-                  error:
-                    type: string
+                  errors:
+                    type: array
+                    items:
+                      type: string
         get:
           description: User List
           tags:
@@ -107,8 +109,10 @@ nelmio_api_doc:
               schema:
                 type: object
                 properties:
-                  error:
-                    type: string
+                  errors:
+                    type: array
+                    items:
+                      type: string
 
       /api/category:
         post:
@@ -142,15 +146,19 @@ nelmio_api_doc:
               schema:
                 type: object
                 properties:
-                  error:
-                    type: string
+                  errors:
+                    type: array
+                    items:
+                      type: string
             '401':
               description: Access denied
               schema:
                 type: object
                 properties:
-                  error:
-                    type: string
+                  errors:
+                    type: array
+                    items:
+                      type: string
         get:
           description: List of categories
           tags:
@@ -174,16 +182,19 @@ nelmio_api_doc:
               schema:
                 type: object
                 properties:
-                  error:
-                    type: string
+                  errors:
+                    type: array
+                    items:
+                      type: string
             '401':
               description: Access denied
               schema:
                 type: object
                 properties:
-                  error:
-                    type: string
-
+                  errors:
+                    type: array
+                    items:
+                      type: string
       /api/category/{id}:
         delete:
           description: Delete category
@@ -204,12 +215,88 @@ nelmio_api_doc:
               schema:
                 type: object
                 properties:
-                  error:
-                    type: string
+                  errors:
+                    type: array
+                    items:
+                      type: string
             '404':
               description: Category not found
               schema:
                 type: object
                 properties:
-                  error:
+                  errors:
+                    type: array
+                    items:
+                      type: string
+      /api/task:
+        post:
+          description: Create task
+          tags:
+            - Task
+          produces:
+            - application/json
+          parameters:
+            - name: Task details
+              description: Task details
+              required: true
+              in: body
+              schema:
+                type: object
+                properties:
+                  title:
                     type: string
+                  text:
+                    type: string
+                  category:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+          responses:
+            '200':
+              description: Task was created
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  title:
+                    type: string
+                  text:
+                    type: string
+                  category:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                      title:
+                        type: string
+                  owner:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                      username:
+                        type: string
+                      roles:
+                        type: array
+                        items:
+                          type: string
+            '400':
+              description: Bad request
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: array
+                    items:
+                      type: string
+            '401':
+              description: Access denied
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: array
+                    items:
+                      type: string
